--- a/langs/de-CH.json
+++ b/langs/de-CH.json
@@ -388,6 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Zeig Hitboxes Spuur",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Zeig en Spuur fo de Hitboxe wo diin Speler döre gange esch, Zeig Hitboxe wird für das bruucht",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Legacy Berächnig",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Gschiidi Startpositione",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Setzt Spöumodus, Gschwindigkeit, Grössi & Grenze für Startpositione automatisch",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Versteck Schnittstelle",
@@ -479,6 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "INTERFACE": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
   "SPEEDHACK": "",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "",
