--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -18,7 +18,7 @@
   "ERROR/REPLAY/FILE_NOT_FOUND": "Datei nicht gefunden",
   "ERROR/REPLAY/NO_INPUTS": "",
   "ERROR/STATUS/MAX_FIELDS": "",
-  "ERROR/LEVEL/NO_CBF": "Installieren sie "Click Between Frames" auf Geode!",
+  "ERROR/LEVEL/NO_CBF": "Installieren sie Click Between Frames auf Geode!",
   "MESSAGE": "Nachricht",
   "MESSAGE/OK": "OK",
   "MESSAGE/CANCEL": "Abbrechen",
@@ -388,6 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Hitbox-Trail zeigen",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Zeigt den Verlaug der Spieler-Hitbox während eines Versuchs an; benötigt Hitboxen zeigen",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Alte Berechnung",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Intelligente StartPos",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Legt Spielmodus, Geschwindigkeit, Größe und Rand für eine StartPosition automatisch fest",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Benutzeroberfläche verbergen",
@@ -479,6 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "INTERFACE": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
   "SPEEDHACK": "Geschwindigkeits-Hack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Aktiviert",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Ermöglicht Veränderung der Geschwindigkeit des Spiels",
