--- a/langs/el-GR.json
+++ b/langs/el-GR.json
@@ -2,8 +2,11 @@
   "NX/COLOUR/B": "Μπλε",
   "NX/COLOUR/DROPDOWN/INPUT": "Δεκαεξαδικό χρώμα",
   "NX/COLOUR/G": "Πράσινο",
+  "NX/COLOUR/H": "",
   "NX/COLOUR/INPUT": "Δεκαεξαδικό χρώμα",
   "NX/COLOUR/R": "Κόκκινο",
+  "NX/COLOUR/S": "",
+  "NX/COLOUR/V": "",
   "NX/COLOUR/RESET": "Επαναφορά χρώματος",
   "NX/COMBO/EMPTY": "",
   "NX/PICKER/EMPTY": "",
@@ -22,36 +25,47 @@
   "MESSAGE/YES": "Ναι",
   "MESSAGE/NO": "Οχι",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "",
   "MESSAGE/REPLAY/SAVE": "",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "",
   "MESSAGE/KEYBINDS/EMPTY": "",
+  "GM_VAR/0060": "",
+  "GM_VAR/0061": "",
+  "GM_VAR/0062": "",
+  "GM_VAR/0096": "",
   "HOME/LANGUAGE": "Γλώσσα",
   "HOME/SEARCH": "Αναζήτηση",
+  "HOME/RULESETS": "",
+  "HOME/RULESETS/SAFE_MODE": "",
   "HOME/ANIM_SPEED": "",
   "HOME/ANIM_SPEED/PRE": "",
   "HOME/ANIM_SPEED/SUF": "",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "",
   "HOME/DOT/TIP": "",
-  "HOME/HOTKEY_ALT": "",
-  "HOME/HOTKEY_ALT/PRE": "",
-  "HOME/HOTKEY_ICONS": "",
-  "HOME/HOTKEY_ICONS/PRE": "",
-  "HOME/LOGOUT": "",
+  "HOME/SHORTCUT/ALT": "",
+  "HOME/SHORTCUT/ICONIC": "",
   "HOME/SORT_TABS": "",
   "HOME/SCALE": "",
   "HOME/SCALE/PRE": "",
   "HOME/SCALE/SUF": "",
   "HOME/THEME": "",
-  "HOME/LICENSES": "",
+  "HOME/MISC": "",
+  "HOME/MISC/LICENSES": "",
+  "HOME/MISC/LOAD_LANG": "",
+  "HOME/MISC/LOAD_LEGACY_SAVE": "",
+  "HOME/MISC/LOGOUT": "",
   "KEYBINDS": "",
   "KEYBINDS/SHORTCUT": "",
   "KEYBINDS/SET": "",
   "KEYBINDS/VIEW": "",
   "KEYBINDS/REMOVE": "",
+  "KEYBINDS/DISABLE_IN_EDITOR": "",
+  "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
   "KEYBINDS/EMPTY": "",
   "BYPASS": "Ξεκλείδωμα",
   "BYPASS/HACK_MAIN_LEVELS": "Κύρια Επίπεδα",
@@ -71,6 +85,13 @@
   "BYPASS/HACK_UNLOCK_VAULTS": "Ξεκλειδώστε τα θησαυροφυλάκια",
   "BYPASS/HACK_UNLOCK_VAULTS/TIP": "Ξεκλειδώνει όλα τα θησαυροφυλάκια",
   "COSMETIC": "Εμφανισιακα",
+  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Επαναδημιουργεί το 2.0 barrel-roll bug",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Κλασικά Σωματίδια",
@@ -152,6 +173,8 @@
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Μονοπάτι Στερεού Κύματος",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "Χωρίς ανάμειξη στο ίχνος κυμάτων, όπως το ασπρόμαυρο μονοπάτι",
+  "COSMETIC/HACK_STARTPOS_RESET_CAMERA": "",
+  "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Σταματήστε τα ερεθίσματα στο θάνατο",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Διακόπτει τις σκανδάλες κίνησης/περιστροφής κατά τον θάνατο, ώστε να μπορείτε να δείτε τι σας σκότωσε",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Κοπή μονοπατιών",
@@ -247,8 +270,12 @@
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING/TIP": "",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "Αυτόματη λήψη τραγουδιού",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Ξεκινά αυτόματα η λήψη τραγουδιών όταν ανοίγετε τη σελίδα επιπέδου",
-  "LEVEL/HACK_CBF": "Πάτημα Μεταξυ Καρέ",
-  "LEVEL/HACK_CBF/TIP": "Εναλλαγή Πάτημα Μεταξυ Καρέ (πρεπεί να έχει γίνει εγκαταστάση του mod άπο τον syzzi)",
+  "LEVEL/HACK_AUTO_START_POS": "",
+  "LEVEL/HACK_AUTO_START_POS/TIP": "",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
+  "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Παράκαμψη ορίου σημείου ελέγχου",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Παρακάμπτει το όριο των 50 σημείων ελέγχου",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Συλλέξτε νομίσματα στην πράξη",
@@ -287,8 +314,6 @@
   "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Δείχνει την τροχιά που πάει ο παίκτης",
   "LEVEL/HACK_SHOW_TRIGGERS": "Εμφάνιση Ενεργοποιητών",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Εμφανίζει τους Ενεργοποιητές σε επίπεδο",
-  "LEVEL/HACK_STARTPOS_RESET_CAMERA": "Επαναφορά κάμερας Startpos",
-  "LEVEL/HACK_STARTPOS_RESET_CAMERA/TIP": "Αναγκάζει την επαναφορά της StartPosition κάμερας",
   "LEVEL/HACK_SHIPCOPTER": "",
   "LEVEL/HACK_SHIPCOPTER/TIP": "",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER": "",
@@ -363,6 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Εμφάνιση διαδρομής hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Εμφανίζει ένα ίχνος για το πού πήγε το hitbox του προγράμματος αναπαραγωγής σας κατά τη διάρκεια μιας προσπάθειας, Απαιτείται Εμφάνιση Hitboxes",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Υπολογισμός παλαιού τύπου",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Έξυπνο StartPos",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Ορίζει αυτόματα τη λειτουργία παιχνιδιού, την ταχύτητα, το μέγεθος και το περίγραμμα για ένα StartPos",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Απόκρυψη διεπαφής",
@@ -372,6 +401,9 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/R/PRE": "Δεξί",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/ALLOW_RATED": "",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/DISABLE_IN_PRACTICE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "Εναλλαγή μετά τον θάνατο",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "Εναλλαγή Startpos",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "Σας επιτρέπει να κάνετε εναλλαγή μεταξύ πολλαπλών θέσεων εκκίνησης σε επίπεδο",
@@ -380,14 +412,20 @@
   "UNIVERSAL/CUSTOM_BG/HACK_CUSTOM_BG/TIP": "",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME": "Να επιτρέπεται η χαμηλή ένταση ήχου",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Αφαιρεί το κούμπωμα στο 0% όταν ρυθμίζει την ένταση στο 3% ή χαμηλότερο",
+  "UNIVERSAL/HACK_COMPACT_LISTS": "",
+  "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
   "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Αυτόματη ασφαλή λειτουργία",
   "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Ενεργοποιεί την Ασφαλή λειτουργία μόνο όταν είναι ενεργοποιημένες οι κλεψιές",
   "UNIVERSAL/HACK_FAST_CHESTS": "Γρήγορα σεντούκια",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Κάνει το animation των σεντουκιών πιο γρήγορο",
+  "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
+  "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY/TIP": "",
   "UNIVERSAL/HACK_LOCK_CURSOR": "Κλείδωμα Κέρσορα",
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Κλειδώνει τον κέρσορα στο παράθυρο κατά την αναπαραγωγή/επεξεργασία επιπέδου",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Αναπαραγωγή Κύριου μενού",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Πάρτε τον έλεγχο του παιχνιδιού στο κύριο μενού",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Χωρίς Μετάβαση",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Συντόμευση του χρόνου μετάβασης σκηνής σε 0s",
   "UNIVERSAL/HACK_SAFE_MODE": "Ασφαλής λειτουργία",
@@ -445,6 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "INTERFACE": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
   "SPEEDHACK": "",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Χαμηλωνει την ταχύτητα παιχνιδιού με βάση το πολλαπλάσιο",
@@ -545,6 +588,8 @@
   "STATUS/*/MOVE/DOWN": "",
   "STATUS/*/MOVE/UP": "",
   "STATUS/*/UNITS": "",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "",
   "STATUS/CHEAT_INDICATOR/ENABLED": "",
   "STATUS/FPS/ENABLED": "",
