--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -388,6 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Show Hitboxes Trail",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Shows a trail of where your player's hitbox went during an attempt, Show Hitboxes required",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Legacy Calculation",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "Gamemode Portals",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "Speed Portals",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "Size Portals",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "Mirror Portals",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Smart StartPos",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Automatically sets gamemode, speed, size & border for a StartPos",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Hide Interface",
@@ -479,6 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Duration (s)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Duration",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
+  "INTERFACE": "Interface",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "Hide Endscreen Cheats",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Hide Endscreen Extras",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "Hide Menu Snow",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Hide Iconic on Pause",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Enabled",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Slows down the game globally by a set multiplier",
