--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -388,6 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Mostra Traccia Hitbox",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Mostra una traccia della posizione della hitbox del giocatore durante un tentativo, richiede Mostra Hitbox",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Calcolo Legacy",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "StartPos Intelligente",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Imposta automaticamente modalità, velocità, dimensione e bordo per uno StartPos",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Nascondi Interfaccia",
@@ -479,6 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "INTERFACE": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Attivato",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Rallenta il gioco di un coefficiente",
