--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -388,6 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "히트박스 트레일 표시",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "시도 중 플레이어의 히트박스가 어디로 갔는지 트레일을 표시합니다, 히트박스 표시가 필요합니다.",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "레거시 계산",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "스타트포스 개선",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "스타트포스의 게임 모드, 속도, 크기와 테두리를 자동으로 설정합니다.",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "인터페이스 숨기기",
@@ -479,6 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "지속 시간 (초)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "지속 시간",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "초",
+  "INTERFACE": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
   "SPEEDHACK": "스피드핵",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "활성화됨",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "설정된 배수로 게임 전체 속도를 느리게 합니다.",
