--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -388,6 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Показ хітбоксів трейлом",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Показує трейл у вигляді хітбоксів, який іде в тому ж напрямку, що й гравець; потрібен показ хітбоксів",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Старі розрахунки",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Розумні старт. позиції",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Автоматично змінює режим, швидкість, розмір і кордони для стартової позиції",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Сховати інтерфейс",
@@ -479,6 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Тривалість (с)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Тривалість",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "с",
+  "INTERFACE": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
   "SPEEDHACK": "Спідхак",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Увімкнений",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Змінює швидкість гри в певну кількість разів",
