--- a/langs/zh-CN.json
+++ b/langs/zh-CN.json
@@ -388,6 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "显示碰撞箱尾迹",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "绘制玩家碰撞箱的痕迹，需要开启碰撞箱显示",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "经典位置计算",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "自动StartPos",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "自动调节所有StartPos",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "隐藏UI",
@@ -479,6 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "持续时间(秒)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "时间",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "秒",
+  "INTERFACE": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
   "SPEEDHACK": "变速",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "开启变速",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "666这个人加速",
