--- a/langs/ar-SA.json
+++ b/langs/ar-SA.json
@@ -388,6 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "إظهار أثر صناديق الاصطدام",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "يعرض أثرًا لمكان ذهاب صندوق اصطدام اللاعب أثناء المحاولة، يتطلب إظهار صناديق الاصطدام",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "الحساب القديم",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "موضع بداية ذكي",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "يضبط وضع اللعبة والسرعة والحجم والحد تلقائيًا لموضع بداية",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "إخفاء الواجهة",
@@ -479,6 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "INTERFACE": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
   "SPEEDHACK": "سرعة الاختراق",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "ممكن",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "",
