--- a/langs/es-AR.json
+++ b/langs/es-AR.json
@@ -388,6 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Mostrar cola de hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Muestra una cola de donde estuvo la hitbox del jugador",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Cálculo Legacy",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Start-Pos inteligente",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Pone el modo de juego, velocidad, tamaño y borde para una Start-Pos automáticamente",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Esconder la interfaz",
@@ -479,6 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "INTERFACE": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
   "SPEEDHACK": "",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "",
