--- a/langs/es-MX.json
+++ b/langs/es-MX.json
@@ -388,6 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Mostrar Rastro de Hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Muestra un rastro del recorrido de la hitbox de tu jugador durante un intento; requiere tener las hitboxes activadas.",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Cálculo (heredado)",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "StartPos Inteligente",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Establece automáticamente el modo de juego, velocidad, tamaño y borde para un StartPos.",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Ocultar Interfaz",
@@ -479,6 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "INTERFACE": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
   "SPEEDHACK": "Velocidad",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Velocidad",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Permite modificar la velocidad del juego.",
