--- a/langs/ga-IE.json
+++ b/langs/ga-IE.json
@@ -388,6 +388,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Taispeáin Hitboxes Trail",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Taispeánann sé rian den áit a ndeachaigh do Hitbox imreoir le linn iarrachta, Taispeáin Hitboxes ag teastáil",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Ríomh Oidhreacht",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Suíomh-Tosaigh Cliste",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Socraítear go huathoibríoch modh cluiche, luas, méid agus teorainn le haghaidh Staid Tosaigh",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Folaigh Comhéadan",
@@ -479,6 +483,11 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "INTERFACE": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
   "SPEEDHACK": "Luashaic",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Cumasaithe",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "",
